# todoapp

./: .pre-commit-config.yaml  README.md  docker-compose-dev.yml  main.py  pyproject.toml  requests.http
app/: settings.py
app/application/: services.py
app/domain/: filters.py  models.py  repositories.py
app/infrastructure/postgres/: db.py  mappers.py  repositories.py  tables.py
app/presentation/: api.py  api_auth.py  api_task.py  security.py  serializers.py
migrations/: env.py
migrations/versions/: 6f94799456db_create_todo_table.py  77e70fd0f7cd_create_user_table.py  dcc07d841c21_add_relations_beatween_task_and_user.py  e5052a8e42e0_add_status_to_task.py
